--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --verbose"
   },
   "eslintConfig": {
     "extends": [
@@ -32,6 +33,10 @@
     ]
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
